<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_4e3a2e029309dab1a4662c98394915f"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center_horizontal"
        android:text="@string/bill"
        android:textColor="#8F7ADD"
        android:textSize="34sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewDisplay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/amount"
            android:textColor="#8F7ADD" />

        <EditText
            android:id="@+id/editAmount"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/EntAmt"
            android:inputType="number"
            android:singleLine="false"
            android:textColor="#8F7ADD"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/textViewDisplay3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/num_of_pax"
            android:textColor="#8F7ADD" />

        <EditText
            android:id="@+id/editNumber"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/entNum"
            android:inputType="number"
            android:textColor="#8F7ADD"
            android:textColorHint="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleButtonSVS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/togglebutton"
            android:textOff="@string/no_svs"
            android:textOn="@string/svs" />

        <ToggleButton
            android:id="@+id/toggleButtonGST"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="ToggleButton"
            android:textOff="@string/no_gst"
            android:textOn="@string/gst" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewDisplay4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discount"
            android:textColor="#8F7ADD" />

        <EditText
            android:id="@+id/editDiscount"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:fontFamily="monospace"
            android:hint="@string/entDisc"
            android:inputType="number"
            android:textColor="#8F7ADD"
            android:textColorHint="#000000" />

        <RadioGroup
            android:id="@+id/radioGroupPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/radioButtonCash"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonCash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/cash" />

            <RadioButton
                android:id="@+id/radioButtonPaynow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paynow" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSplit"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#D4D5D5"
            android:text="@string/split"
            android:textColor="#000000"
            app:backgroundTint="#D5D6D6" />

        <Button
            android:id="@+id/buttonReset"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#D4D5D5"
            android:text="@string/reset"
            android:textColor="#000000"
            app:backgroundTint="#D5D6D6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/displayBill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:hint="@string/total_bill_here"
            android:textColorHint="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/displayEachPay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="monospace"
            android:hint="@string/eachperson"
            android:textColorHint="#000000"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>